unifico input-output de notebooks@

--- a/webScraping.ipynb
+++ b/webScraping.ipynb
@@ -3,10 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "webScraping.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyPJVjWygkQWjxUArlKOFpzS",
-      "include_colab_link": true
+      "name": "Copy of webScraping.ipynb",
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -17,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/lromano97/text-mining/blob/main/webScraping.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -78,7 +66,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "110fb4d7-7449-4b61-dadb-d50c639fed02"
+        "outputId": "a07b39c1-58ce-4450-b1e9-da85e8923201"
       },
       "source": [
         "# Activacndo Google Drive para guardar la información\n",
@@ -90,7 +78,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Mounted at /content/gdrive\n"
           ],
           "name": "stdout"
         }
@@ -103,17 +91,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3b24df86-10ec-40d3-b4e0-f2d3a3c5bf2d"
+        "outputId": "01936c47-7f8d-49ed-8a11-109902ffeb3e"
       },
       "source": [
-        "cd \"/content/gdrive/My Drive/Colab Notebooks/Text Mining/TopicsTED\""
+        "cd \"/content/gdrive/My Drive/Facultad/Austral/Maestria 1/13 - Text mining/00 - TPs/Web Scraping\""
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content/gdrive/My Drive/Colab Notebooks/Text Mining/TopicsTED\n"
+            "/content/gdrive/My Drive/Facultad/Austral/Maestria 1/13 - Text mining/00 - TPs/Web Scraping\n"
           ],
           "name": "stdout"
         }
@@ -131,40 +119,84 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5SrfqB3IKvq0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7fec8df1-ddc9-4829-e0ae-6b4f9cf20713"
+        "id": "frI3XxqhhlP2"
       },
       "source": [
-        "time__  =  time.time()     # Tiempo de corrida en Collab es de 6 minutos\n",
-        "\n",
-        "\n",
-        "urls = []\n",
-        "page_number=0\n",
-        "\n",
-        "while 1:\n",
-        "    page_number += 1\n",
-        "\n",
-        "    res  =  requests.get(\"https://www.ted.com/talks?sort=popular&page=\" + str(page_number), \n",
+        "time__  =  time.time()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bQi642rmhpz_"
+      },
+      "source": [
+        "def get_page_text(page_number):\n",
+        "  res  =  requests.get(\"https://www.ted.com/talks?sort=popular&page=\" + str(page_number), \n",
         "                         headers = {'User-agent': 'your bot 0.1'})\n",
         "\n",
-        "    soup = bs4.BeautifulSoup(res.text)\n",
-        "    e = soup.select(\"div.container.results div.col\")\n",
-        "    \n",
-        "    if len(e) == 0:    break    # No more videos.\n",
-        "    \n",
-        "    for  u  in e:\n",
-        "        urls.append(\"https://www.ted.com\" + u.select(\"div.media__image a.ga-link\")[0].get(\"href\"))\n",
+        "  soup = bs4.BeautifulSoup(res.text)\n",
+        "  e = soup.select(\"div.container.results div.col\")\n",
+        "  \n",
+        "  return e"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dyrW-lZ0ipNg"
+      },
+      "source": [
+        "def get_urls(page_list):\n",
+        "  page_urls = []\n",
+        "  for url in page_list:\n",
+        "    page_urls.append(\"https://www.ted.com\" + url.select(\"div.media__image a.ga-link\")[0].get(\"href\"))\n",
+        "  \n",
+        "  return page_urls"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z-fAzqbFhgvf"
+      },
+      "source": [
+        "urls = []\n",
+        "page_number=1\n",
         "\n",
+        "while 1:\n",
+        "    page_list_urls = get_page_text(page_number)\n",
+        "    \n",
+        "    if len(page_list_urls) == 0:    \n",
+        "      break\n",
+        "    \n",
+        "    page_number += 1\n",
+        "    urls += get_urls(page_list_urls)\n",
         "\n",
         "# Saving.\n",
         "f = open('TED_Talk_URLs.txt', 'w')\n",
         "f.write('\\n'.join(urls))\n",
-        "f.close()\n",
-        "\n",
-        "\n",
+        "f.close()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5SrfqB3IKvq0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10a3dcef-862b-422c-8c8e-e91a4858c82d"
+      },
+      "source": [
         "def download(urls, id_, csv_list):\n",
         "                for count, url in enumerate(urls):\n",
         "\n",
@@ -346,11 +378,22 @@
         {
           "output_type": "stream",
           "text": [
-            "337\n"
+            "331\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y-yyfCfhkPH9"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
