Subo fixeo en preprocesamiento

--- a/preprocesamiento.ipynb
+++ b/preprocesamiento.ipynb
@@ -83,12 +83,12 @@
         "pp = pprint.PrettyPrinter(indent=4, compact=True)\n",
         "nlp = spacy.load(\"en_core_web_lg\")\n",
         "\n",
+        "ted_file = 'Ted_Talk.csv'\n",
+        "\n",
         "language = 'english'\n",
         "\n",
         "language_stops = set(stopwords.words(language))\n",
-        "language_stops.update(string.punctuation)\n",
-        "\n",
-        "ted_file = 'Ted_Talk.csv'"
+        "language_stops.update(string.punctuation)"
       ],
       "execution_count": null,
       "outputs": []
@@ -331,6 +331,19 @@
       },
       "source": [
         "def get_urls(page_list):\n",
+        "  \"\"\"\n",
+        "    Obtencion de las urls de las charlas TED\n",
+        "\n",
+        "    Attributes\n",
+        "    ----------\n",
+        "    page_list: list\n",
+        "      lista de paginas de charlas TED\n",
+        "\n",
+        "    Returns\n",
+        "    -------\n",
+        "    list\n",
+        "      retorna una lista con todas las urls de las charlas TED\n",
+        "  \"\"\"\n",
         "  urls = [\"https://www.ted.com\" + url.select(\"div.media__image a.ga-link\")[0].get(\"href\") for url in page_list]\n",
         "  return urls"
       ],
@@ -344,6 +357,21 @@
       },
       "source": [
         "def get_transcript(url, count):\n",
+        "  \"\"\"\n",
+        "    Obtiene la transcripcion de una determinada charla ted\n",
+        "\n",
+        "    Attributes\n",
+        "    ----------\n",
+        "    url: str\n",
+        "      url de la charla TED\n",
+        "    count: int\n",
+        "      indice de la pagina url\n",
+        "\n",
+        "    Returns\n",
+        "    -------\n",
+        "    str\n",
+        "      retorna una cadena de caracteres con la transcripcion de la charla TED\n",
+        "  \"\"\"\n",
         "  transcript = \"\"\n",
         "  transcript_res = requests.get(url, headers = {'User-agent': 'your bot 0.1'})\n",
         "  soup = BeautifulSoup(transcript_res.text)\n",
@@ -383,6 +411,19 @@
       },
       "source": [
         "def get__json_obj(url):\n",
+        "  \"\"\"\n",
+        "    Obtiene el objecto JSON de una respectiva URL\n",
+        "\n",
+        "    Attributes\n",
+        "    ----------\n",
+        "    url: str\n",
+        "      url a analizar\n",
+        "\n",
+        "    Returns\n",
+        "    -------\n",
+        "    str\n",
+        "      retorna una cadena de caracteres que representa el objeto JSON de la URL\n",
+        "  \"\"\"\n",
         "  res = requests.get(url.strip(), headers = {'User-agent': 'your bot 0.1'})\n",
         "  start_index = res.text.find('<script data-spec=\"q\">q(\"talkPage.init\",')\n",
         "  end_index = res.text[start_index:].find(')</script>')\n",
@@ -399,6 +440,21 @@
       },
       "source": [
         "def get_value(l, m):\n",
+        "  \"\"\"\n",
+        "    Obtiene el valor de un elemento HTML\n",
+        "\n",
+        "    Attributes\n",
+        "    ----------\n",
+        "    l: list\n",
+        "      elementos\n",
+        "    m: s\n",
+        "      metadata\n",
+        "\n",
+        "    Returns\n",
+        "    -------\n",
+        "    str\n",
+        "      retorna el valor del elemento HTML\n",
+        "  \"\"\"\n",
         "  for i in l:\n",
         "    try:\n",
         "      m = m[i]\n",
@@ -416,6 +472,19 @@
       },
       "source": [
         "def html_to_text(html):\n",
+        "  \"\"\"\n",
+        "    Convierte un valor HTML a cadena de caracteres\n",
+        "\n",
+        "    Attributes\n",
+        "    ----------\n",
+        "    html: str\n",
+        "      valor de elemento HTML\n",
+        "\n",
+        "    Returns\n",
+        "    -------\n",
+        "    str\n",
+        "      retorna la representacion del valor del elemento HTML en cadena de caracdteres\n",
+        "  \"\"\"\n",
         "  if str(html)!='nan':\n",
         "    soup = BeautifulSoup(html)\n",
         "    return soup.get_text()\n",
@@ -432,8 +501,24 @@
       },
       "source": [
         "def get_elements_dict_from_url(count, url, json_obj):\n",
-        "  metadata = json.loads(json_obj)[\"__INITIAL_DATA__\"]\n",
+        "  \"\"\"\n",
+        "    Generacion de diccionario de elementos de una URL\n",
         "\n",
+        "    Attributes\n",
+        "    ----------\n",
+        "    count: int\n",
+        "      indice de la URL dentro del listado de URLs\n",
+        "    url: str\n",
+        "      url a analizar\n",
+        "    json_obj: str\n",
+        "      objeto JSON de la URL\n",
+        "\n",
+        "    Returns\n",
+        "    -------\n",
+        "    dict\n",
+        "      retorna un diccionario que contiene todos los elementos HTML con sus respectivos valores\n",
+        "  \"\"\"\n",
+        "  metadata = json.loads(json_obj)[\"__INITIAL_DATA__\"]\n",
         "  language = get_value([\"language\"], metadata)\n",
         "  url__transcript = url + \"/transcript?language=\" + language\n",
         "  temp = get_value([\"talks\", 0, \"recorded_at\"], metadata)\n",
@@ -481,6 +566,18 @@
       },
       "source": [
         "def download(urls, id_, csv_list):\n",
+        "  \"\"\"\n",
+        "    Descarga toda la informacion respecto a las charlas TED\n",
+        "\n",
+        "    Attributes\n",
+        "    ----------\n",
+        "    urls: list\n",
+        "      lista de URLs a descargar\n",
+        "    id_: int\n",
+        "      lorem ipsum dolor\n",
+        "    csv_list: list\n",
+        "      csv donde se guardara la informacion respecto a las charlas ted\n",
+        "  \"\"\"\n",
         "  for count, url in enumerate(urls):\n",
         "    json_obj = get__json_obj(url)\n",
         "\n",
@@ -507,6 +604,16 @@
       },
       "source": [
         "def scrape_ted_urls(urls, file_name):\n",
+        "  \"\"\"\n",
+        "    Realiza un proceso de web-scraping sobre todas las charlas TED\n",
+        "\n",
+        "    Attributes\n",
+        "    ----------\n",
+        "    urls: list\n",
+        "      URL de charlas TED a scrappear\n",
+        "    file_name: list\n",
+        "      nombre de archivo donde se guardara toda la informacion de las charlas TED\n",
+        "  \"\"\"\n",
         "  csv_list_ = []\n",
         "  \n",
         "  with Manager() as manager:\n",
@@ -544,6 +651,19 @@
       },
       "source": [
         "def get_page_text(page_number):\n",
+        "  \"\"\"\n",
+        "    Obtiene la URL de una charla TED\n",
+        "\n",
+        "    Attributes\n",
+        "    ----------\n",
+        "    page_number: int\n",
+        "      numero de pagina\n",
+        "\n",
+        "    Returns\n",
+        "    -------\n",
+        "    str\n",
+        "      retorna la URL de una charla TED\n",
+        "  \"\"\"\n",
         "  res = requests.get(\"https://www.ted.com/talks?sort=popular&page=\" + str(page_number), headers = {'User-agent': 'your bot 0.1'})\n",
         "  soup = bs4.BeautifulSoup(res.text)\n",
         "  element = soup.select(\"div.container.results div.col\")\n",
@@ -559,6 +679,14 @@
       },
       "source": [
         "def retrieve_pages_url():\n",
+        "  \"\"\"\n",
+        "    Obtiene las URL de todas las charlas TED en un determinado idioma\n",
+        "\n",
+        "    Returns\n",
+        "    -------\n",
+        "    list\n",
+        "      retorna un listado de URL de cada charla TED en un determinado idioma\n",
+        "  \"\"\"\n",
         "  urls = []\n",
         "  page_number=1\n",
         "\n",
@@ -589,7 +717,7 @@
         "# Activando Google Drive para guardar la información\n",
         "drive.mount('/content/gdrive')\n",
         "\n",
-        "# Directorio donde se guardara/buscara el archivo de ted\n",
+        "# Directorio donde se guardara/buscara el archivo que contiene la informacion de las charlas TED\n",
         "os.chdir('/content/gdrive/My Drive')"
       ],
       "execution_count": null,
@@ -601,7 +729,7 @@
         "id": "IxEo7dxz-qN5"
       },
       "source": [
-        "# Si no existe el archivo de TED, hace toda la falopeada de web-scraping asquerosa copy-pasted\n",
+        "# Si no existe el archivo de TED, hace toda la falopeada de web-scraping asquerosa copy-pasted (toma 6 minutos aprox)\n",
         "if not os.path.isfile(ted_file):\n",
         "  ted_urls = retrieve_pages_url()\n",
         "  scrape_ted_urls(ted_urls, ted_file)"
@@ -653,21 +781,11 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(tedx_df.transcript, tedx_df.tag, test_size=.30)\n",
         "X_train = X_train.values.astype('U')\n",
-        "X_test = X_test.values.astype('U')"
-      ],
-      "execution_count": 47,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ygcp2PgGY_zR"
-      },
-      "source": [
+        "X_test = X_test.values.astype('U')\n",
         "del tedx_df\n",
         "gc.collect()"
       ],
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
