cambio base path 😅

--- a/preprocesamiento.ipynb
+++ b/preprocesamiento.ipynb
@@ -1126,7 +1126,7 @@
         "drive.mount('/content/gdrive')\n",
         "\n",
         "# Directorio donde se guardara/buscara el archivo que contiene la informacion de las charlas TED\n",
-        "os.chdir('/content/gdrive/My Drive/Facultad/Austral/Maestria 1/13 - Text mining/00 - TPs')"
+        "os.chdir('/content/gdrive/My Drive')"
       ],
       "execution_count": 21,
       "outputs": [
