--- a/variable-talks__tags.ipynb
+++ b/variable-talks__tags.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN1iTQrRM/GMcRQuMgrhO1a",
+      "authorship_tag": "ABX9TyOsZjhVuvHvMHd6EcB4jKHp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2022,7 +2022,7 @@
         "3. Con PCA se podría explorar la agrupación por rango de coordenadas\n",
         "4. Corregir los synsets para el algoritmo de medida de LCH\n",
         "5. Lo más importante 😔, terminar de depurar la variable `talks__tags` con el camino que se decida.\n",
-        "6. Eliminar los tags que no tienen tanta ocurrencia, y ver si con esto se limpian un poco los modelos.\n"
+        "6. Eliminar los tags que no tienen tanta ocurrencia, y ver si con esto se limpian un poco los modelos\n",
         "\n",
         "\n",
         "**Rarezas**\n",
