--- a/Preprocesamiento_unificado.ipynb
+++ b/Preprocesamiento_unificado.ipynb
@@ -85,14 +85,13 @@
         "id": "mpS-KN-QPcjQ"
       },
       "source": [
-        "#Instalación de Bibliotecas y recursos\n",
+        "# Instalación de Bibliotecas y recursos\n",
         "! pip install -U spacy\n",
         "! pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.0.0/en_core_web_lg-3.0.0.tar.gz\n",
         "! pip install unidecode\n",
-        "! pip install xgboost\n",
-        "! pip install lightgbm\n",
+        "! pip install bs4\n",
         "\n",
-        "#Generales:\n",
+        "# Importacion de bibliotecas\n",
         "import os\n",
         "import os.path\n",
         "import pprint\n",
@@ -107,34 +106,34 @@
         "import random\n",
         "import warnings\n",
         "import gc\n",
+        "import pprint\n",
+        "import warnings\n",
+        "import nltk\n",
+        "import spacy\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import plotly.express as px\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "from scipy.stats import gaussian_kde\n",
         "\n",
-        "#WebScraping\n",
+        "# Generales\n",
+        "from scipy.stats import gaussian_kde\n",
         "from multiprocessing import Manager, Process\n",
         "from bs4 import BeautifulSoup\n",
         "from datetime import datetime\n",
         "from google.colab import drive\n",
+        "from spacy import displacy\n",
         "\n",
-        "#Particulares\n",
-        "import nltk\n",
+        "# NLTK\n",
         "from nltk.text import Text\n",
         "from nltk.tokenize import word_tokenize, sent_tokenize\n",
         "from nltk.corpus import stopwords\n",
         "from nltk.stem import SnowballStemmer\n",
         "from nltk.corpus import wordnet as wn\n",
         "from nltk.collocations import BigramCollocationFinder,BigramAssocMeasures\n",
-        "import spacy\n",
-        "from spacy import displacy\n",
         "\n",
-        "# Affinity Propagation Clustering (APC)\n",
+        "# SKLEARN\n",
         "from sklearn.cluster import AffinityPropagation\n",
-        "\n",
-        "#Modelo\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from sklearn.model_selection import train_test_split\n",
@@ -143,28 +142,27 @@
         "from sklearn.svm import LinearSVC\n",
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.ensemble import StackingClassifier, RandomForestClassifier, AdaBoostClassifier, GradientBoostingClassifier\n",
         "from sklearn.metrics.pairwise import cosine_similarity\n",
         "from sklearn.multiclass import OneVsRestClassifier\n",
         "from sklearn.preprocessing import MultiLabelBinarizer\n",
         "from sklearn.metrics import accuracy_score, recall_score, precision_score\n",
-        "from xgboost import XGBRegressor\n",
-        "from lightgbm.sklearn import LGBMRegressor\n",
         "\n",
-        "# impresiones compactas\n",
-        "import pprint\n",
-        "pp = pprint.PrettyPrinter(compact=True)\n",
-        "\n",
+        "# Variables\n",
         "ted_file = 'Ted_Talk.csv'\n",
         "language = 'english'\n",
         "\n",
-        "# sin warnings\n",
-        "import warnings\n",
+        "# PrettyPrinter\n",
+        "pp = pprint.PrettyPrinter(compact=True)\n",
+        "pp = pprint.PrettyPrinter(indent=4, compact=True)\n",
+        "\n",
+        "# No mostrar warnings\n",
         "warnings.filterwarnings('ignore')\n",
         "\n",
         "nltk.download('all')\n",
         "nltk.download('wordnet')\n",
-        "pp = pprint.PrettyPrinter(indent=4, compact=True)\n",
+        "\n",
         "nlp = spacy.load(\"en_core_web_lg\")\n",
         "\n",
         "language_stops = set(stopwords.words(language))\n",
@@ -205,7 +203,7 @@
         "  \"\"\"\n",
         "  return [token for token in text if token.lower() not in language_stops]"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -232,7 +230,7 @@
         "  doc = nlp(\" \".join(text))\n",
         "  return [token.lemma_ for token in doc]"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +261,7 @@
         "    tokens = [token for token in tokens if not regexp.search(token)]\n",
         "  return tokens"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -288,7 +286,7 @@
         "  \"\"\"\n",
         "  return [word for word in text if len(word) > 1]"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -326,7 +324,7 @@
         "  else:\n",
         "    raise Exception('metodo de tokenizacion no encontrado')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -352,7 +350,7 @@
         "  matrix_simil = cosine_similarity(matrix)\n",
         "  return pd.DataFrame(matrix_simil)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -383,7 +381,7 @@
         "  lematized_words = lematize_words(without_short_words)\n",
         "  return lematized_words"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -410,7 +408,7 @@
         "  \"\"\"\n",
         "  return serie.str.replace(char, '')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -436,7 +434,7 @@
         "  urls = [\"https://www.ted.com\" + url.select(\"div.media__image a.ga-link\")[0].get(\"href\") for url in page_list]\n",
         "  return urls"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -490,7 +488,7 @@
         "\n",
         "  return transcript"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -519,7 +517,7 @@
         "  script_tag = res.text[start_index: start_index + end_index]\n",
         "  return script_tag[len('<script data-spec=\"q\">q(\"talkPage.init\",'):]"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -551,7 +549,7 @@
         "      return ''\n",
         "  return m"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -580,7 +578,7 @@
         "  else: \n",
         "    return html"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -645,7 +643,7 @@
         "\n",
         "  return elements_dict"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -683,7 +681,7 @@
         "    else:\n",
         "      csv_list.append(get_elements_dict_from_url(count, url, json_obj))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -729,7 +727,7 @@
         "  dataframe_ted = pd.DataFrame(csv_list_).sort_values(\"view_count\", ascending=False)\n",
         "  dataframe_ted.to_csv(file_name, index=False, encoding='utf-8')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -757,7 +755,7 @@
         "  element = soup.select(\"div.container.results div.col\")\n",
         "  return element"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -793,7 +791,7 @@
         "\n",
         "  return urls"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -821,7 +819,7 @@
         "# Directorio donde se guardara/buscara el archivo que contiene la informacion de las charlas TED\n",
         "os.chdir('/content/gdrive/My Drive')"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -843,7 +841,7 @@
         "  ted_urls = retrieve_pages_url()\n",
         "  scrape_ted_urls(ted_urls, ted_file)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1294,7 +1292,7 @@
         "tedx_df = tedx_df[tedx_df['transcript'] != np.nan]\n",
         "tedx_df = tedx_df[[len(ast.literal_eval(tag)) > 0 for tag in tedx_df['talks__tags']]]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1383,7 +1381,7 @@
         "# conteo de valores únicos en la variable theme\n",
         "temas_df['temas'].value_counts()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1420,7 +1418,7 @@
         "pop_temas = pd.DataFrame(temas_df['temas'].value_counts()).reset_index()\n",
         "pop_temas.columns = ['temas', 'talks']"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1439,7 +1437,7 @@
         "plt.xticks(rotation=90)\n",
         "plt.show()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1471,7 +1469,7 @@
         "plt.xticks(rotation=90)\n",
         "plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1511,7 +1509,7 @@
         "# Creando una lista con los talks__tags\n",
         "temas = list(set(temas_df['temas']))"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1525,7 +1523,7 @@
         "tedlist = list(filter(ted.match, temas))\n",
         "temas = [word for word in temas if word not in tedlist]"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1538,7 +1536,7 @@
         "for i in range(len(temas)):\n",
         "    temas[i] = temas[i].lower()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1550,7 +1548,7 @@
         "# Remplazando espacios por el caracter _\n",
         "temas = [sub.replace(' ', '_') for sub in temas]"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1567,7 +1565,7 @@
         "temas.sort()\n",
         "pp.pprint(temas)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1692,7 +1690,7 @@
       "source": [
         "pp.pprint(sin_synset)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1728,7 +1726,7 @@
         "temas_apc = [word for word in temas if word not in sin_synset]\n",
         "pp.pprint(temas_apc)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1814,7 +1812,7 @@
         "    cluster_str = \", \".join(cluster)\n",
         "    print(\" - *%s:* %s\" % (exemplar, cluster_str))"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1830,7 +1828,7 @@
         "similarity_wup[similarity_wup == None] = 0\n",
         "similarity_path[similarity_path == None] = 0"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1959,7 +1957,7 @@
         "jsonFile.write(tags_final)\n",
         "jsonFile.close()\n"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1981,7 +1979,7 @@
         "jsonContent = fileObject.read()\n",
         "df_tags = json.loads(jsonContent)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1995,7 +1993,7 @@
         "\n",
         "tedx_df.talks__tags = tedx_df.apply(lambda x: reduce_tags(x.talks__tags), axis=1)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2040,7 +2038,7 @@
       "source": [
         "tfidf_vectorizer = TfidfVectorizer(tokenizer=pre_procesamiento_texto)"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2061,22 +2059,20 @@
         "mlb = MultiLabelBinarizer()\n",
         "\n",
         "estimators = [\n",
-        "    ('svr', RandomForestClassifier()),\n",
+        "    ('rf', RandomForestClassifier()),\n",
         "    ('dt', DecisionTreeClassifier()),\n",
         "    ('ab', AdaBoostClassifier()),\n",
         "    ('nb', GaussianNB()),\n",
-        "    ('gb', GradientBoostingClassifier()),\n",
-        "    ('lb', LGBMRegressor()),\n",
-        "    ('xb', XGBRegressor())\n",
+        "    ('gb', GradientBoostingClassifier())\n",
         "]\n",
         "\n",
-        "# Con Stacking de 7 modelos\n",
-        "#model = OneVsRestClassifier(StackingClassifier(estimators=estimators))\n",
+        "# Con Stacking de 5 modelos + decision final con regresion logistica\n",
+        "#model = OneVsRestClassifier(StackingClassifier(estimators=estimators, final_estimator=LogisticRegression()))\n",
         "\n",
         "# Con LinearSVC funciona muy bien y tarda menos que todo el stacking\n",
         "model = OneVsRestClassifier(LinearSVC())"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2093,7 +2089,7 @@
         "    def transform(self, X, y=None, **fit_params):\n",
         "        return X.todense()"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2108,7 +2104,7 @@
         "                              ('classifier', model)\n",
         "])"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2131,7 +2127,7 @@
         "# Predice X_test\n",
         "y_pred = [list(predicted_row) for predicted_row in mlb.inverse_transform(ml_pipeline.predict(X_test))]"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2146,7 +2142,7 @@
       "source": [
         "pp.pprint(y_pred)"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2439,7 +2435,7 @@
       "source": [
         "pp.pprint(y_test)"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2506,7 +2502,7 @@
         "        acc_list.append(tmp_a)\n",
         "    return np.mean(acc_list)"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2521,7 +2517,7 @@
       "source": [
         "print(f'{hamming_score(np.array(y_test), np.array(y_pred)) * 100}%')"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2558,7 +2554,7 @@
         "\n",
         "print(f'{accuracy_score(sparse_y_test, sparse_y_pred) * 100}%')"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2598,7 +2594,7 @@
       "source": [
         "print(f'{recall_score(sparse_y_test, sparse_y_pred, average=\"micro\") * 100}%')"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2630,7 +2626,7 @@
       "source": [
         "print(f'{recall_score(sparse_y_test, sparse_y_pred, average=\"weighted\") * 100}%')"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2670,7 +2666,7 @@
       "source": [
         "print(f'{precision_score(sparse_y_test, sparse_y_pred, average=\"micro\") * 100}%')"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2693,7 +2689,7 @@
       "source": [
         "print(f'{precision_score(sparse_y_test, sparse_y_pred, average=\"weighted\") * 100}%')"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
